--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "Oliver Winkler",
   "license": "ISC",
   "dependencies": {
+    "@simplewebauthn/server": "^7.2.0",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
