--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "emoji-dictionary": "^1.0.11",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
