--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
+    "passport-saml": "^3.2.4",
     "ua-parser-js": "^1.0.35",
     "uuid": "^9.0.0"
   },
